# AI-soc-platform

./: .env.example  .gitignore  LICENSE.txt  README.md  fix_imports.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
config/: app.yaml  detection.yaml  ingestion.yaml  logging.yaml  ml.yaml  response.yaml  storage.yaml
docker/: docker-compose.yml
docs/: ARCHITECTURE.md
scripts/: benchmark.py  generate_logs.py  replay_attacks.py  train_models.py
src/: main.py
src/api/: __init__.py  app.py  websocket_manager.py
src/core/: __init__.py  config_loader.py  logger.py  time_utils.py
src/detection/: correlator.py  detector.py  scoring.py
src/detection/rules/: custom_rules.py  sigma_parser.py
src/ingestion/: pipeline.py
src/ingestion/collectors/: file_collector.py  kafka_collector.py  syslog_collector.py
src/ingestion/parsers/: cef_parser.py  json_parser.py  normalizer.py
src/intel/: enrich.py  feeds.py  ioc_matcher.py
src/ml/: drift_monitor.py  inference.py  training.py
src/ml/anomaly/: autoencoder.py  isolation_forest.py
src/monitoring/: health.py  metrics.py
src/response/: executor.py  firewall.py  notifier.py
src/response/playbooks/: block_ip.yaml  brute_force.yaml  malware.yaml
src/storage/: cache.py  elastic.py  local_store.py
src/ui/: index.html
src/ui/css/: style.css
src/ui/js/: alerts.js  app.js  charts.js  dashboard.js  events.js  intel.js  response.js  (+1 more)
src/utils/: config_loader.py  logger.py  time_utils.py
tests/integration/: test_pipeline.py
tests/unit/: test_detection.py  test_ingestion.py  test_ml.py
